Correctly links a bubble with an anchor to its parent widget in the accessibility tree.

Bug: 785628
Change-Id: Iffeca7f101f47c12c04b20d0dc3a4cdfc346658d
Tested: manuall with Jaws and NVDA
R=dmazzoni@chromium.org, aleventhal@chromium.org